[package]
name = "webcam-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.1"
glutin = "0.28"
glium = "0.32.1"
v4l = "0.14.0"
custos = { path = "../custos", default-features=false, features=["cuda", "static-api"] }
nvjpeg-sys = { path = "../nvjpeg-rs/nvjpeg-sys" }
cuda-driver-sys = "0.3.0"
fastrand = "2.0.0"
